Feature: start implement nav bar

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -7,6 +7,8 @@
   <meta name="theme-color" content="{{ settings.color_accent }}">
   <link rel="canonical" href="{{ canonical_url }}">
 
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
   {%- if settings.favicon != blank -%}
     <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
   {%- endif -%}
