Feature: more implementation for mega menu

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -8,6 +8,7 @@
   <link rel="canonical" href="{{ canonical_url }}">
 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
   {%- if settings.favicon != blank -%}
     <link rel="shortcut icon" href="{{ settings.favicon | img_url: '32x32' }}" type="image/png">
