--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -11,6 +11,18 @@
 // }
 
 @font-face {
+  font-family: 'neuzeit_grotesk_regular';
+  src: url('../assets/fonts/neuzeit_grotesk_regular-webfont.eot');
+  src: url('../assets/fonts/neuzeit_grotesk_regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../assets/fonts/neuzeit_grotesk_regular-webfont.woff2') format('woff2'),
+       url('../assets/fonts/neuzeit_grotesk_regular-webfont.woff') format('woff'),
+       url('../assets/fonts/neuzeit_grotesk_regular-webfont.ttf') format('truetype'),
+       url('../assets/fonts/neuzeit_grotesk_regular-webfont.svg#neuzeit_groteskregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'neuzeitgroteskblack';
   src: url('../assets/fonts/neuzeitgroteskblack.eot');
   src: url('../assets/fonts/neuzeitgroteskblack.eot?#iefix') format('embedded-opentype'),
@@ -18,6 +30,14 @@
        url('../assets/fonts/neuzeitgroteskblack.woff') format('woff'),
        url('../assets/fonts/neuzeitgroteskblack.ttf') format('truetype'),
        url('../assets/fonts/neuzeitgroteskblack.svg#neuzeitgroteskblack') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'sf_display_regular';
+  src: url('../assets/fonts/sfcompactdisplay-regular-webfont.woff') format('woff'),
+       url('../assets/fonts/sfcompactdisplay-regular-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
