--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,173 +3,17 @@
 /**
  * XPAND | Built with Slate
  */
-$gap: 0;
+$gap: 10px;
+$fullhd-enabled: false;
 
 @import "~bulma/sass/utilities/initial-variables.sass";
 $navbar-breakpoint: $tablet;
 @import "~bulma/bulma";
 @import "fonts";
+@import "sections/header";
 
-.navbar {
-  overflow-y: scroll;
-  overflow-x: hidden;
-
-  .announcement {
-    background-color: #ffd828;
-
-    .text-wrap {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      height: 30px;
-
-      &:first-child {
-        margin-right: 30px;
-      }
-
-      @media screen and (max-width: $tablet - 1px) {
-        height: 20px;
-        display: flex;
-      }
-    }
-
-    .close {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 30px;
-      height: 30px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 12px;
-      color: white;
-
-      &:hover {
-        color: white;
-      }
-    }
-
-    .announcement-icon {
-      height: 17px;
-      margin-right: 8px;
-
-      @media screen and (max-width: $tablet - 1px) {
-        display: none;
-      }
-    }
-
-    p {
-      display: inline;
-      font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
-      margin-bottom: 0;
-      letter-spacing: 0;
-      font-size: 12px;
-      line-height: 16px;
-    }
-  }
-
-  .menu {
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.15);
-    margin-bottom: 10px;
-
-    .container {
-      align-items: stretch;
-      display: flex;
-      min-height: 3.25rem;
-      width: 100%;
-      height: 60px;
-
-      @media screen and (max-width: $tablet - 1px) {
-        min-height: 40px;
-        height: 40px;
-      }
-    }
-  }
-
-  .drop-menu {
-
-  }
-
-  .navbar-brand {
-    @media screen and (max-width: $tablet - 1px) {
-      min-height: 40px;
-    }
-
-    @media screen and (min-width: $tablet) {
-      margin-left: 0;
-    }
-
-    @media screen and (min-width: $desktop) {
-      margin-left: -.75rem;
-    }
-  }
-
-  .navbar-brand, .navbar-menu {
-    font-family: "neuzeitgroteskblack";
-    font-size: 17px;
-  }
-
-  .navbar-menu {
-    margin-left: 60px;
-  }
-
-  .navbar-item {
-    @media screen and (max-width: $tablet - 1px) {
-      max-height: 40px;
-    }
-
-    padding-top: 12px;
-    color: #606060;
-    border-bottom: 1px solid transparent;
-
-    &:hover {
-      border-bottom: solid 1px #606060;
-      color: #008ffd;
-      background: none;
-    }
-
-    img {
-      @media screen and (max-width: $tablet - 1px) {
-        height: 20px;
-      }
-
-      max-height: 35px;
-    }
-
-    .icon-down-arrow {
-      font-size: 12px;
-      line-height: 13px;
-      margin-left: 6px;
-    }
-  }
-
-  .navbar-item.mobile {
-    @media screen and (max-width: $tablet - 1px) {
-      display: flex;
-    }
-
-    display: none;
-    width: 100px;
-    margin-left: 60px;
-    border-bottom: none;
-    background-color: #0090fc;
-    font-size: 14px;
-    letter-spacing: 1px;
-    color: white;
-
-    &:hover {
-      background-color: #0090fc;
-    }
-  }
-
-  .navbar-item.logo {
-    padding-top: 8px;
-
-    &:hover {
-      border-bottom: 1px solid transparent;
-    }
-  }
+[v-cloak] {
+  display: none;
 }
 
 .rows {
