--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -227,8 +227,12 @@
 
       h3 {
         font-family: "neuzeit_grotesk_regular";
-        font-size: 22px;
-        font-weight: bold;
+        font-size: 18px;
+
+        @media screen and (min-width: $large-phone) {
+          font-size: 22px;
+          font-weight: bold;
+        }
       }
 
       p {
